--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.4",
+    "country-state-city": "^3.2.1",
     "file-saver": "^2.0.5",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.2",
@@ -74,5 +75,5 @@
     "babel-preset-react-app": "^10.0.1",
     "html-webpack-plugin": "^5.6.0"
   },
-  "proxy":"http://13.233.43.240:8081"
+  "proxy": "http://localhost:8081"
 }
