--- a/package.json
+++ b/package.json
@@ -17,14 +17,18 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
+    "body-parser": "^1.20.2",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.4",
+    "cors": "^2.8.5",
     "country-state-city": "^3.2.1",
+    "express": "^4.19.2",
     "file-saver": "^2.0.5",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.2",
     "number-to-words": "^1.2.4",
     "papaparse": "^5.4.1",
+    "razorpay": "^2.9.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.4",
     "react-chartjs-2": "^5.2.0",
