--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "@babel/preset-react": "^7.24.7",
     "babel-preset-react-app": "^10.0.1",
     "html-webpack-plugin": "^5.6.0"
-  }
+  },
+  "proxy": "http://localhost:8081"
   
 }
