--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "papaparse": "^5.4.1",
     "razorpay": "^2.9.4",
     "react": "^18.2.0",
+    "react-awesome-calendar": "^1.0.14",
     "react-bootstrap": "^2.10.4",
     "react-chartjs-2": "^5.2.0",
     "react-countup": "^6.5.3",
@@ -80,5 +81,4 @@
     "html-webpack-plugin": "^5.6.0"
   },
   "proxy": "http://localhost:8081"
-  
 }
