--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "country-state-city": "^3.2.1",
     "express": "^4.19.2",
     "file-saver": "^2.0.5",
+    "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.10.2",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.2",
     "number-to-words": "^1.2.4",
