--- a/package.json
+++ b/package.json
@@ -82,5 +82,5 @@
     "babel-preset-react-app": "^10.0.1",
     "html-webpack-plugin": "^5.6.0"
   },
-  "proxy": "http://localhost:8081"
+  "proxy": "http://13.233.43.240:8081"
 }
