--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.19.2",
     "file-saver": "^2.0.5",
     "html2canvas": "^1.4.1",
+    "html2pdf": "^0.0.11",
     "html2pdf.js": "^0.10.2",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.2",
