--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@mui/styles": "^5.16.7",
     "@mui/x-date-pickers": "^6.0.0",
     "@mui/x-date-pickers-pro": "^7.11.0",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
     "@restart/ui": "^1.8.0",
     "@syncfusion/ej2-react-inputs": "^26.1.38",
     "@testing-library/jest-dom": "^5.17.0",
@@ -31,6 +33,7 @@
     "jspdf-autotable": "^3.8.2",
     "number-to-words": "^1.2.4",
     "papaparse": "^5.4.1",
+    "pdfjs-dist": "^3.11.174",
     "razorpay": "^2.9.4",
     "react": "^18.3.1",
     "react-awesome-calendar": "^1.0.14",
