--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "@mui/styles": "^5.16.7",
     "@mui/x-date-pickers": "^6.0.0",
     "@mui/x-date-pickers-pro": "^7.11.0",
+    "@nivo/bar": "^0.87.0",
+    "@nivo/core": "^0.87.0",
+    "@nivo/line": "^0.87.0",
     "@restart/ui": "^1.8.0",
     "@syncfusion/ej2-react-inputs": "^26.1.38",
     "@testing-library/jest-dom": "^5.17.0",
@@ -22,6 +25,7 @@
     "chart.js": "^4.4.4",
     "cors": "^2.8.5",
     "country-state-city": "^3.2.1",
+    "d3": "^7.9.0",
     "express": "^4.19.2",
     "file-saver": "^2.0.5",
     "html2canvas": "^1.4.1",
