--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@nivo/bar": "^0.87.0",
     "@nivo/core": "^0.87.0",
     "@nivo/line": "^0.87.0",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/zoom": "^3.12.0",
     "@restart/ui": "^1.8.0",
     "@syncfusion/ej2-react-inputs": "^26.1.38",
     "@testing-library/jest-dom": "^5.17.0",
