--- a/package.json
+++ b/package.json
@@ -93,5 +93,5 @@
     "babel-preset-react-app": "^10.0.1",
     "html-webpack-plugin": "^5.6.0"
   },
-  "proxy": "https://pjsofttech.in:20443"
+  "proxy": "http://localhost:8081"
 }
